[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
error-stack = "0.4.1"
lazy_static = "1.4.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
